pages/assets/basic.css
body {
    color: black;
    line-height: 1.8;
}
a {
    text-decoration: none;
}
.center {
    text-align:center;
}
.six-em {
    font-size: 6em;
    line-height: .5em;
}
.three-em {
    font-size: 3em;
}
.two-em {
    font-size: 2em;
}
.one-em {
    font-size: 1.5em;
}
@media (max-width: 768px) {
    .six-em {
        font-size: 3em ;
        line-height: .5em;
    }
    .three-em {
        font-size: 1.7em ;
    }
    .two-em {
        font-size: 1.2em ;
    }
    .one-em {
        font-size: 1em ;
    }
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}
.loading-spinner.active {
    border-radius: 50%;
    width: 24px;
    height: 24px;
    border: 0.25rem solid #919191;
    border-top-color: black;
    animation: spin 1s infinite linear;
    display: inline-block;
}
.green {
    color: green;
}
.red {
    color: red;
}
.orange {
    color: orange;
}
.white {
    color: white;
}
.white:hover {
    color: lightgrey;
}
.pb_outline-dark.highlight {
    border: 1px solid white;
    border-radius: 4px;
    text-transform: capitalize;
}
.pb_outline-dark.highlight:hover {
    border: 1px solid black;
}

